Add ids and classes for styling & header

--- a/index.html
+++ b/index.html
@@ -3,10 +3,59 @@
 
 <head>
     <title>Maxed Vision | Homepage</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="The vision beyond stars.">
+    <meta name="keywords" content="maxed vision,indie,team,game,games,developing,indie games">
+    <meta property="og:title" content="Home - Maxed Vision" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://maxedvision.github.io/" />
+    <meta property="og:image" content="http://my.site.com/images/thumb.png" />
+    <meta property="og:description" content="The vision beyond stars." />
+    <meta name="theme-color" content="#5985F7">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@800&family=Yanone+Kaffeesatz:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/icon_circle_low.png">
 </head>
 
 <body>
-    <h1>The vision beyond stars.</h1>
+    <header>
+        <div class="container">
+            <div id="branding">
+                <img src="img/icon_transparent.png" alt="Logo" id="icon">
+            </div>
+            <nav>
+                <ul>
+                    <li class="current"><a href="index.html">Home</a></li>
+                    <li><a href="">?</a></li>
+                    <li><a href="">?</a></li>
+                    <li><a href="">?</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div id="main-content">
+        <div class="container">
+            <h1 id="slogan" class="big">The vision beyond stars.</h1>
+            <button><a href="games.html" class="small">The vision of Games</a></button>
+            <p><br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br><br>
+                <br>+<br><br><br><br><br><br><br><br>+<br>
+                <br><br><br><br><br><br><br><br><br><br><br>
+            </p>
+        </div>
+
+        <footer>
+            <p></p>
+        </footer>
+    </div>
+
 </body>
 
 </html>
