--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="icon" href="img/icon_circle_low.png">
     <script src="js/script.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NW53N69WDF%22%3E"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NW53N69WDF"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -30,33 +30,34 @@
             dataLayer.push(arguments);
         }
         gtag('js', new Date());
+
         gtag('config', 'G-NW53N69WDF');
     </script>
 </head>
 
 <body>
     <header>
-        <div class=" container ">
-            <div id="branding ">
-                <a href="index.html ">
-                    <img src="img/icon_circle.png " alt="Logo " id="icon ">
+        <div class=" container">
+            <div id="branding">
+                <a href="index.html">
+                    <img src="img/icon_circle.png" alt="Logo" id="icon">
                 </a>
             </div>
             <nav>
                 <ul>
-                    <li class="current "><a href="index.html ">Home</a></li>
-                    <li><a href=" ">?</a></li>
-                    <li><a href=" ">?</a></li>
-                    <li><a href=" ">?</a></li>
+                    <li class="current"><a href="index.html">Home</a></li>
+                    <li><a href="">?</a></li>
+                    <li><a href="">?</a></li>
+                    <li><a href="">?</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <div id="main-content ">
-        <div class="container ">
-            <h1 id="slogan " class="big ">The vision beyond stars.</h1>
-            <button><a href="games.html " class="small ">Our visions</a></button>
+    <div id="main-content">
+        <div class="container">
+            <h1 id="slogan" class="big">The vision beyond stars.</h1>
+            <button><a href="games.html" class="small">Our visions</a></button>
             <p><br><br><br><br><br><br><br><br><br><br>
                 <br><br><br><br><br><br><br><br><br><br>
                 <br><br><br><br><br><br><br><br><br><br>
@@ -67,53 +68,53 @@
             </p>
         </div>
 
-        <div class="container " id="contact " style="display: none; ">
-            <p id="contact-cancel " onclick="contactCancel() ">✖</p>
-            <form action="https://formsubmit.co/fdac07fe7b93f9fb57b65365b76e39a9 " method="POST ">
+        <div class="container" id="contact" style="display: none;">
+            <p id="contact-cancel" onclick="contactCancel()">✖</p>
+            <form action="https://formsubmit.co/fdac07fe7b93f9fb57b65365b76e39a9" method="POST">
                 <!-- Honeypot (filter automated bots)-->
-                <input type="text " name="_honey " style="display: none; ">
+                <input type="text" name="_honey" style="display: none;">
                 <!-- Disable Captcha -->
-                <input type="hidden " name="_captcha " value="false ">
+                <input type="hidden" name="_captcha" value="false">
                 <!-- Success Page -->
-                <input type="hidden " name="_next " value="success.html ">
+                <input type="hidden" name="_next" value="success.html">
 
                 <!-- Name Input -->
                 <div>
-                    <label for="firstName " class="form-label ">Name</label>
-                    <input type="text " class="form-control " name="Name " id="firstName " required>
+                    <label for="firstName" class="form-label">Name</label>
+                    <input type="text" class="form-control" name="Name" id="firstName" required>
                 </div>
 
                 <!-- Email Input -->
                 <div>
-                    <label for="emailInfo " class="form-label ">Your Email</label>
-                    <input type="email " class="form-control " name="Email " id="emailInfo " required>
+                    <label for="emailInfo" class="form-label">Your Email</label>
+                    <input type="email" class="form-control" name="Email" id="emailInfo" required>
                 </div>
 
                 <!-- Type Input -->
                 <div>
-                    <label for="subject ">Subject</label>
-                    <select name="subject " id="lang ">
-                    <optgroup label="Games ">
-                        <option value="Leaping Light ">Leaping Light</option>
+                    <label for="subject">Subject</label>
+                    <select name="subject" id="lang">
+                    <optgroup label="Games">
+                        <option value="Leaping Light">Leaping Light</option>
                     </optgroup>
-                    <option value="python ">Python</option>
+                    <option value="python">Python</option>
                   </select>
                 </div>
 
                 <!-- Message Input -->
                 <div>
-                    <label for="comments " class="form-label ">Your message</label>
-                    <textarea class="form-control " id="message " name="Message " rows="3 " placeholder="Write your message here... " required></textarea>
+                    <label for="comments" class="form-label">Your message</label>
+                    <textarea class="form-control" id="message" name="Message" rows="3" placeholder="Write your message here..." required></textarea>
                 </div>
 
                 <!-- Submit Button -->
-                <button type="submit ">Submit</button>
+                <button type="submit">Submit</button>
             </form>
         </div>
 
         <footer>
             <p>&copy Maxed Vision, 2022.</p>
-            <button onclick="contactShow() ">Contact us!</button>
+            <button onclick="contactShow()">Contact us!</button>
         </footer>
     </div>
 
