Update ID for Google Analytics

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="icon" href="img/icon_circle_low.png">
     <script src="js/script.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NW53N69WDF"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVEQRFNJLJ"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -31,7 +31,7 @@
         }
         gtag('js', new Date());
 
-        gtag('config', 'G-NW53N69WDF');
+        gtag('config', 'G-LVEQRFNJLJ');
     </script>
 </head>
 
